# kit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  cli.py  config.yaml  llama-stack-run.yaml  pyproject.toml
gateway/: server.py  session_manager.py
runtime/: agent.py  embeddings.py  memory.py  skills.py
tools/: browser.py  core.py  scheduler.py  skills.py  web.py
web/: app.js  index.html  styles.css
workspace/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
workspace/memory/: 2026-07-17.md
workspace/schedules/: schedules.json
workspace/skills/: count-python-files.py  skills_metadata.json
