[project]
name = "personal-assistant"
version = "0.1.0"
description = "Personal AI Assistant inspired by OpenClaw and Hermes"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jon Keam"}
]

dependencies = [
    # Core inference stack
    "ramalama>=0.23.0",
    "llama-stack>=0.7.2",
    "llama-stack-client>=0.7.4",

    # Web and async
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "httpx>=0.28.0",
    "aiohttp>=3.14.0",

    # Data and ML
    "numpy>=2.5.0",
    "pandas>=3.0.0",

    # Vector DB (for Phase 3 memory)
    "chromadb-client>=1.3.5",
    "faiss-cpu>=1.13.0",

    # Chat platform integrations (Phase 2)
    "python-telegram-bot>=21.0",
    "discord.py>=2.0",

    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    "click>=8.4.0",

    # Web capabilities (Phase 4)
    "playwright>=1.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway", "runtime", "tools"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
